# DJPy

./: .gitignore  README.md  manage.py  pyproject.toml
DJPY/: asgi.py  pyvenv.cfg  settings.py  urls.py  wsgi.py
DJPY/Scripts/: Activate.ps1  activate  activate.bat
music/: models.py  urls.py  views.py
music/pages/: musicview.py
music/templates/music/: musicbox.html
show/Scripts/: Activate.ps1  activate  activate.bat
tkinter/: musicbox.py
