[tool.poetry]
name = "djpy"
version = "0.1.0"
description = "music app"
authors = ["Jansen"]

[tool.poetry.dependencies]
python = "^3.8"
django = "3.2.7"
playsound = "1.3.0"
tk = "8.6.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
